--- a/Dockerfile.cppcheck
+++ b/Dockerfile.cppcheck
@@ -1,13 +1,19 @@
 FROM ubuntu:22.04
 
+COPY ./scripts /scripts
+
+WORKDIR /scripts
+
 # Update package index and install dependencies
 # https://askubuntu.com/a/1157132
 RUN apt-get update && \
-    apt-get install -y ca-certificates gpg wget && \
+    apt-get install -y --no-install-recommends ca-certificates gpg wget unzip && \
     wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - |  tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null && \
     echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null && \
     apt-get update && \
-    apt-get install -y build-essential cppcheck cmake
+    apt-get install -y --no-install-recommends build-essential cmake && \
+    /scripts/build_cppcheck.sh -v 2.14.2 && \
+    cmake --install cppcheck/build
 
 # Set the entrypoint script
-ENTRYPOINT ["cppcheck"]
+ENTRYPOINT ["./scripts/run_cppcheck.sh"]
