--- a/Dockerfile.cppcheck
+++ b/Dockerfile.cppcheck
@@ -11,8 +11,8 @@ RUN apt-get update && \
     wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - |  tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null && \
     echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null && \
     apt-get update && \
-    apt-get install -y --no-install-recommends build-essential cmake && \
-    /scripts/build_cppcheck.sh -v 2.14.2 && \
+    apt-get install -y --no-install-recommends build-essential cmake ninja-build && \
+    /scripts/build_cppcheck.sh -v 2.14.2 -o "-G Ninja" && \
     cmake --install cppcheck/build
 
 # Set the entrypoint script
